--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 # Use a package of configuration called an orb.
 orbs:
   # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
+  #welcome: circleci/welcome-orb@0.4.1
   win: circleci/windows@2.2.0 # The Windows orb give you everything you need to start using the Windows executor.
 
 # Orchestrate or schedule a set of jobs
@@ -12,7 +12,7 @@ workflows:
   welcome:
     # Run the welcome/run job in its own container
     jobs:
-      - welcome/run 
+      #- welcome/run 
   　　build: # name of your job
     　　executor:
       　name: win/default # executor type
@@ -20,6 +20,6 @@ workflows:
 
 　    steps:
   　    # Commands are run in a Windows virtual machine environment
-    　  #- checkout
+    　  - checkout
       　- run: Write-Host 'Hello, Windows'
       
